[gd_scene load_steps=3 format=3 uid="uid://g1h2i3j4k5l6"]

[ext_resource type="Script" path="res://scripts/GameUI.gd" id="1_gameui"]
[ext_resource type="PackedScene" uid="uid://c8j2k3l4m5n6" path="res://scenes/CardUI.tscn" id="2_cardui"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_gameui")
card_ui_scene = ExtResource("2_cardui")

[node name="HandContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="GameOverContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="GameOverContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="WinnerLabel" type="Label" parent="GameOverContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "WINNER!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "RESTART MATCH"